# Particules-Interaction-Cellular-Automata

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO  automata.c  automata.h  automata_impl.h  automata_internal.h  config.h  graphics.c  graphics.h  input_handler.c  input_handler.h  main.c  mainold.c  particules.c  particules.h  particules_internal.h  pathfinding.c  temperature.c  temperature.h  utils.c  utils.h
src/: config.h  error.c  error.h  main.c  particules.h  pathfinding.h  rules.h  test.c  toCopy.c  world.h
